<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:layout_gravity="center"
    android:gravity="center"
    android:theme="@style/AppTheme.NoActionBar">
    <!--    android:background="@color/colorBackground"-->
    <ImageView
        android:id="@+id/bookIconImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        android:visibility="visible"/>
    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBarStyle" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:id="@+id/LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/logo"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="#000000"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="phone"
                    android:layout_marginTop="60dp"
                    android:textSize="15sp" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/password"
                    android:textColor="#000000"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/setip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="@string/forget_password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_drawable"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/LL"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>